user model, generating JW Token
