# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
-        "/ReplyIntent": {
+        "/intents/ReplyIntent": {
             "post": {
                 "description": "Reply to an intent that is POST request from user",
                 "consumes": [
@@ -66,7 +66,7 @@
                 }
             }
         },
-        "/addIntent": {
+        "/intents/addIntent": {
             "post": {
                 "description": "Add an intent to DB",
                 "consumes": [
@@ -115,7 +115,7 @@
                 }
             }
         },
-        "/deleteIntent": {
+        "/intents/deleteIntent": {
             "delete": {
                 "description": "Delete an intent from DB, ===ONLY NEED  TO PASS IN IntentName===",
                 "consumes": [
@@ -164,7 +164,7 @@
                 }
             }
         },
-        "/listIntent": {
+        "/intents/listIntent": {
             "get": {
                 "description": "List all intents",
                 "produces": [
@@ -202,7 +202,7 @@
                 }
             }
         },
-        "/modifyIntent": {
+        "/intents/modifyIntent": {
             "patch": {
                 "description": "Modify an intent to the body's intent by querying \"IntentName\".",
                 "consumes": [
@@ -244,6 +244,110 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/Login": {
+            "post": {
+                "description": "Login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "user1",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/addUser": {
+            "post": {
+                "description": "Modify an user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Add an user",
+                "parameters": [
+                    {
+                        "description": "user1",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ResponseMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented",
                         "schema": {
                             "$ref": "#/definitions/controllers.HTTPError"
                         }
@@ -319,6 +423,22 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "minLength": 5
+                },
+                "username": {
                     "type": "string"
                 }
             }
